# python_lazy_streams

./: .gitignore  CHANGELOG.rst  LICENSE  Pipfile  README.md  README.rst  build.sh  deploy.sh  dev-requirements.txt  lazy_streams.py  pyproject.toml  run-tests.sh  setup.cfg  setup.py  test.sh  tests.py
.github/workflows/: dev.yml  main.yml  release.yml
tests/: test_lazy_streams.py
