[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "lazy_streams"
version = "1.0.1"
authors = [
    { name = "Steve Brettschneider", email = "steve@bluehousefamily.com" },
    { name = "Rémi Desgrange", email = "remi.desgrange@camptocamp.com" }
]
description = "Java inspired streams in Python"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Operating System :: OS Independent",
]

[tool.setuptools]
py-modules=['lazy_streams']

[project.urls]
"Homepage" = "https://github.com/brettschneider/python_lazy_streams"
"Bug Tracker" = "https://github.com/brettschneider/python_lazy_streams/issues"
